--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ring-to-android-tv",
+    "name": "ring-pipup-bridge",
     "version": "1.0.0",
     "description": "Node application to send Ring API events/pictures to Android devices via PiPup.",
     "license": "MIT",
